--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <!--================= Header ================-->
             <header class="main-header">
-                <a href="/" class="logo-holder"><img src="img/logo/logo.png" alt=""></a>
+                <a href="index.html" class="logo-holder"><img src="img/logo/logo.png" alt="cherki hamza"></a>
                 <!-- info-button -->
                 <div class="nav-button" id="open-button">
                     <span class="menu-global menu-top"></span>
@@ -45,7 +45,7 @@
                     <span class="menu-global menu-bottom"></span>
                 </div>
                 <!-- info-button end-->
-                <div class="show-share isShare"><img src="img/logo/share.png" alt=""></div>
+                <div class="show-share isShare"><img src="img/logo/share.png" alt="cherki hamza"></div>
             </header>
             <!-- End header -->
 
@@ -53,7 +53,7 @@
             <div class="menu-wrap">
                 <div class="menu-inner">
                     <!-- menu logo-->
-                    <a href="/" class="menu-logo"><img src="img/logo/logohamza.png" alt=""></a>
+                    <a href="index.html" class="menu-logo"><img src="img/logo/logohamza.png" alt="cherki hamza"></a>
                     <!-- menu logo end -->
                     <div class="hid-men-wrap   alt">
                      <div id="hid-men">
