--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
 <head>
         <!--=============== basic  ===============-->
         <meta charset="UTF-8">
-        <title>Cooper - Creative  Responsive Personal  Template</title>
+        <title>cherki|hamza</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta name="robots" content="index, cherki hamza"/>
         <meta name="keywords" content="web, full stack, cherki hamza, programming, developer, html5 css3, javascript, Angular, Fremworks, 
