--- a/services.html
+++ b/services.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en">
     
-<!-- Mirrored from cooper.kwst.net/site/blog-single.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2018 16:32:00 GMT -->
 <head>
         <!--=============== basic  ===============-->
         <meta charset="UTF-8">
@@ -35,7 +34,7 @@
         <div id="main">
             <!--================= Header ================-->
             <header class="main-header">
-                <a href="index4.html" class="logo-holder"><img src="img/logo/logo.png" alt="cherki hamza"></a>
+                <a href="index.html" class="logo-holder"><img src="img/logo/logo.png" alt="cherki hamza"></a>
                 <!-- info-button -->
                 <div class="nav-button" id="open-button">
                     <span class="menu-global menu-top"></span>
@@ -290,5 +289,4 @@
         <script type="text/javascript" src="js/scripts.js"></script>
     </body>
 
-<!-- Mirrored from cooper.kwst.net/site/blog-single.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2018 16:32:04 GMT -->
 </html>
