--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    <header class="l-header">
     <nav class="nav bd-grid">
         <div>
-           <a href="https://cherkihamza.com" class="nav__logo">🧡 Cherki Hamza 🧡</a>
+           <a href="https://cherki-hamza.github.io" class="nav__logo">🧡 Cherki Hamza 🧡</a>
         </div>
 
         <div class="nav__menu" id="nav-menu">
