--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Cherki Hamza</title>
+  <title>Cherki Hamza dev</title>
   <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/img/dev.png">
@@ -51,7 +51,7 @@
         <div class="home__data">
             <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Cherki Hamza</span><br>Developer Web Full Stack</h1>
 
-            <a href="https://cherkihamza.com" class="button">Welcome</a>
+            <a href="https://cherkihamza.com" class="button">🧡Welcome🧡</a>
         </div>
 
         <div class="home__social">
