--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <a target="_blink" href="https://www.linkedin.com/in/cherki-hamza/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
         <a target="_blink" href="https://www.instagram.com/hpaccharki/" class="home__social-icon"><i class='bx bxl-instagram' ></i></a>
     </div>
-    <p>&#169; 2020-2021 copyright all right reserved</p>
+    <p>&#169; 2023 copyright all right reserved</p>
 </footer>
    
    <script src="https://unpkg.com/scrollreveal"></script>
