--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <a target="_blink" href="https://www.instagram.com/hpaccharki/" class="home__social-icon"><i class='bx bxl-instagram' ></i></a>
                 </p>
                <p class="skills__text">
-                    Email : fullstack@cherkihamza.com
+                    Email : cherkihamzafullstack@gmail.com
                 </p>
                 <p class="skills__text">
                     Email : cherki0hamza@gmail.com
