--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@
                 <p class="skills__text">
                     Email : cherki0hamza@gmail.com
                 </p>
+              <p class="skills__text">
+                    Tel : +212 0637806939
+                </p>
             </div>
             
             <div>              
