--- a/index.html
+++ b/index.html
@@ -233,5 +233,22 @@
    
    <script src="https://unpkg.com/scrollreveal"></script>
    <script src="assets/js/main.js"></script>
-<script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.35a5ca1855eb057f016a.js" defer></script><script src="main.ebc9d3c1a424277807d1.js" defer></script></body>
+<script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.35a5ca1855eb057f016a.js" defer></script><script src="main.ebc9d3c1a424277807d1.js" defer></script>
+
+  <!-- Default Statcounter code for hamza portfolio https://hamzacherki.com/ -->
+<script type="text/javascript">
+var sc_project=12884431; 
+var sc_invisible=0; 
+var sc_security="f49cf35e"; 
+var scJsHost = "https://";
+document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="Web Analytics Made Easy -
+Statcounter" href="https://statcounter.com/" target="_blank"><img
+class="statcounter" src="https://c.statcounter.com/12884431/0/f49cf35e/0/"
+alt="Web Analytics Made Easy - Statcounter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
+  </body>
 </html>
