--- a/index.html
+++ b/index.html
@@ -248,5 +248,11 @@ href="https://statcounter.com/" target="_blank"><img class="statcounter"
 src="https://c.statcounter.com/12887266/0/8e2bf432/1/" alt="Web Analytics"
 referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 <!-- End of Statcounter Code -->
+  <script>
+  window.screetsxi = {
+    appid: "64777b0aedc5b5d54376c633.nw1",
+  };
+  (function(){var w = window;var i = function() { i.c( arguments ); };i.q = []; i.c = function( args ) { i.q.push(args); };w.scxi = i;w.addEventListener( "load", function() {var b = document.createElement("script");b.src = 'https://widget.screets.io/_/'+w.screetsxi.appid;b.async = !0;document.head.appendChild(b);}, !1 );})();
+</script>
   </body>
 </html>
