--- a/index.html
+++ b/index.html
@@ -234,9 +234,23 @@
    <script src="https://unpkg.com/scrollreveal"></script>
    <script src="assets/js/main.js"></script>
 <script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.35a5ca1855eb057f016a.js" defer></script><script src="main.ebc9d3c1a424277807d1.js" defer></script>
+  
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/647e442f94cf5d49dc5bf76b/1h26jkmq1';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 
 <!-- Default Statcounter code for hpc portfolio https://hamzacherki.com/ -->
-<script type="text/javascript">
+ <!-- <script type="text/javascript">
 var sc_project=12887266; 
 var sc_invisible=1; 
 var sc_security="8e2bf432"; 
@@ -253,6 +267,6 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
     appid: "64777b0aedc5b5d54376c633.nw1",
   };
   (function(){var w = window;var i = function() { i.c( arguments ); };i.q = []; i.c = function( args ) { i.q.push(args); };w.scxi = i;w.addEventListener( "load", function() {var b = document.createElement("script");b.src = 'https://widget.screets.io/_/'+w.screetsxi.appid;b.async = !0;document.head.appendChild(b);}, !1 );})();
-</script>
+</script> -->
   </body>
 </html>
