--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
+  
 
 <!-- Default Statcounter code for hpc portfolio https://hamzacherki.com/ -->
  <!-- <script type="text/javascript">
@@ -261,7 +262,7 @@ src="https://www.statcounter.com/counter/counter.js" async></script>
 href="https://statcounter.com/" target="_blank"><img class="statcounter"
 src="https://c.statcounter.com/12887266/0/8e2bf432/1/" alt="Web Analytics"
 referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-<!-- End of Statcounter Code -->
+<!-- End of Statcounter Code
   <script>
   window.screetsxi = {
     appid: "64777b0aedc5b5d54376c633.nw1",
