--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    <header class="l-header">
     <nav class="nav bd-grid">
         <div>
-           <a href="https://hamzacherki.com" class="nav__logo">🧡 Cherki Hamza 🧡</a>
+           <a href="https://cherkihamza.com/" class="nav__logo">🧡 Cherki Hamza 🧡</a>
         </div>
 
         <div class="nav__menu" id="nav-menu">
@@ -51,7 +51,7 @@
         <div class="home__data">
             <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Cherki Hamza</span><br>Developer Web Full Stack</h1>
 
-            <a href="https://hamzacherki.com" class="button">Welcome</a>
+            <a href="https://cherkihamza.com/" class="button">Welcome</a>
         </div>
 
         <div class="home__social">
@@ -228,7 +228,7 @@
         <a target="_blink" href="https://www.linkedin.com/in/cherki-hamza/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
         <a target="_blink" href="https://www.instagram.com/hpaccharki/" class="home__social-icon"><i class='bx bxl-instagram' ></i></a>
     </div>
-    <p>&#169; 2023 copyright all right reserved</p>
+    <p>&#169; 2020-2024 copyright all right reserved</p>
 </footer>
    
    <script src="https://unpkg.com/scrollreveal"></script>
